--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,8 @@ jobs:
     # See: https://circleci.com/docs/executor-types/
     executor:
       name: android/android-machine
+      environment:
+          JVM_VERSION: "17"
 
     # Add steps to the job
     # See: https://circleci.com/docs/configuration-reference/#steps
