--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,5 +9,8 @@ jobs:
       - image: cimg/android:2023.08
     steps:
       - checkout
+      - run:
+          name: Set Permissions for gradlew
+          command: chmod +x ./gradlew
       - run: ./gradlew androidDependencies
       - run: ./gradlew lint test
