--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,3 +14,4 @@ jobs:
           command: chmod +x ./gradlew
       - run: ./gradlew androidDependencies
       - run: ./gradlew lint test
+      - run: ./gradlew assembleRelease
